--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/node": "^16.4.13",
+    "@types/react-native": "^0.64.12",
+    "axios": "^0.21.1",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
